--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 venv
 .idea
 NewsPaper/news/__pycache__
+NewsPaper/accounts/__pycache__
+NewsPaper/fpages/__pycache__
+NewsPaper/NewsPaper/__pycache__
+NewsPaper/protect/__pycache__
+NewsPaper/sign/__pycache__
 NewsPaper/.env
 
